Fixing cropping progress design on front end.

--- a/core/admin/css/main.css
+++ b/core/admin/css/main.css
@@ -941,6 +941,7 @@
 	.container header h2.cropper span { background-image: none; display: block; float: left; height: auto; margin: 0 8px 0 0; width: auto; }
 	.container header h2.cropper span.count { color: #59A8E9; font-size: 20px; }
 	.container header h2.cropper .button_loader { float: left; margin: 14px 0 0 20px; }
+	.front_end_editor header h2.cropper { border-bottom: none; height: 44px; overflow: hidden; }
 
 /*---------------------------
 	Analytics
